--- a/WR.ipynb
+++ b/WR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrdf = wr_df.loc[(wr_df['Pos'] == 'wr')] #locate rows that only contain "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -130,19 +139,6 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Darren Waller</td>\n",
-       "      <td>LVR</td>\n",
-       "      <td>te</td>\n",
-       "      <td>19</td>\n",
-       "      <td>10</td>\n",
-       "      <td>52.6%</td>\n",
-       "      <td>105</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Keenan Allen</td>\n",
        "      <td>LAC</td>\n",
@@ -169,6 +165,19 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chris Godwin</td>\n",
+       "      <td>TAM</td>\n",
+       "      <td>wr</td>\n",
+       "      <td>14</td>\n",
+       "      <td>9</td>\n",
+       "      <td>64.3%</td>\n",
+       "      <td>105</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -182,99 +191,99 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>238</th>\n",
-       "      <td>Ian Thomas</td>\n",
-       "      <td>CAR</td>\n",
-       "      <td>te</td>\n",
+       "      <th>199</th>\n",
+       "      <td>Devin Duvernay</td>\n",
+       "      <td>BAL</td>\n",
+       "      <td>wr</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>50.0%</td>\n",
-       "      <td>17</td>\n",
+       "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>8.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>Elijah Moore</td>\n",
+       "      <td>NYJ</td>\n",
+       "      <td>wr</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25.0%</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>239</th>\n",
-       "      <td>Mike Thomas</td>\n",
-       "      <td>CIN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>226</th>\n",
+       "      <td>Donovan Peoples-Jones</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>wr</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100.0%</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>230</th>\n",
+       "      <td>Demarcus Robinson</td>\n",
+       "      <td>KAN</td>\n",
+       "      <td>wr</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50.0%</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>Courtland Sutton</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>wr</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>33.3%</td>\n",
-       "      <td>5</td>\n",
+       "      <td>14</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240</th>\n",
-       "      <td>Dede Westbrook</td>\n",
-       "      <td>MIN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>100.0%</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>241</th>\n",
-       "      <td>Nick Westbrook-Ikhine</td>\n",
-       "      <td>TEN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50.0%</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>242</th>\n",
-       "      <td>Javonte Williams</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>100.0%</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>4.7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>236 rows × 10 columns</p>\n",
+       "<p>73 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Player   Tm  Pos Tgt Rec   Ctch%  Yds TD Y/Tgt Fmb\n",
-       "0             Amari Cooper  DAL   wr  16  13   81.3%  139  2   8.7   0\n",
-       "1              Tyreek Hill  KAN   wr  15  11   73.3%  197  1  13.1   0\n",
-       "2            Darren Waller  LVR   te  19  10   52.6%  105  1   5.5   0\n",
-       "3             Keenan Allen  LAC   wr  13   9   69.2%  100  0   7.7   1\n",
-       "4             Stefon Diggs  BUF   wr  14   9   64.3%   69  0   4.9   0\n",
-       "..                     ...  ...  ...  ..  ..     ...  ... ..   ...  ..\n",
-       "238             Ian Thomas  CAR   te   2   1   50.0%   17  0   8.5   0\n",
-       "239            Mike Thomas  CIN  NaN   3   1   33.3%    5  0   1.7   0\n",
-       "240         Dede Westbrook  MIN  NaN   1   1  100.0%   11  0  11.0   0\n",
-       "241  Nick Westbrook-Ikhine  TEN  NaN   2   1   50.0%   10  0   5.0   0\n",
-       "242       Javonte Williams  DEN  NaN   1   1  100.0%   -4  0  -4.0   0\n",
+       "                    Player   Tm Pos Tgt Rec   Ctch%  Yds TD Y/Tgt Fmb\n",
+       "0             Amari Cooper  DAL  wr  16  13   81.3%  139  2   8.7   0\n",
+       "1              Tyreek Hill  KAN  wr  15  11   73.3%  197  1  13.1   0\n",
+       "3             Keenan Allen  LAC  wr  13   9   69.2%  100  0   7.7   1\n",
+       "4             Stefon Diggs  BUF  wr  14   9   64.3%   69  0   4.9   0\n",
+       "5             Chris Godwin  TAM  wr  14   9   64.3%  105  1   7.5   1\n",
+       "..                     ...  ...  ..  ..  ..     ...  ... ..   ...  ..\n",
+       "199         Devin Duvernay  BAL  wr   2   1   50.0%    6  0   3.0   1\n",
+       "224           Elijah Moore  NYJ  wr   4   1   25.0%   -3  0  -0.8   0\n",
+       "226  Donovan Peoples-Jones  CLE  wr   1   1  100.0%    4  0   4.0   0\n",
+       "230      Demarcus Robinson  KAN  wr   2   1   50.0%    9  0   4.5   0\n",
+       "237       Courtland Sutton  DEN  wr   3   1   33.3%   14  0   4.7   0\n",
        "\n",
-       "[236 rows x 10 columns]"
+       "[73 rows x 10 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wr_df"
+    "wrdf"
    ]
   },
   {
@@ -283,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wr_df.to_csv(r'C:\\Users\\Steve.Lin\\Desktop\\test\\Resources\\wr_data.csv', index=False)"
+    "wrdf.to_csv(r'C:\\Users\\Steve.Lin\\Desktop\\test\\Resources\\wr_data.csv', index=Falsewrdf"
    ]
   },
   {
